feat: login screen.

--- a/finday-web-app/src/app/modules/launch/components/launch-list/launch-list.component.html
+++ b/finday-web-app/src/app/modules/launch/components/launch-list/launch-list.component.html
@@ -1,7 +1,7 @@
 <h3 class="mt-2">Lista de Lançamentos</h3>
 <hr />
 <div class="row card-body">
-  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end mb-2">
     <button class="btn btn-primary btn-sm me-md-2" type="button" routerLink="new">Adicionar</button>
   </div>
   <div class="col-md-12 col-lg-12">
