feat: guard to private area.

--- a/finday-web-app/src/app/app.component.html
+++ b/finday-web-app/src/app/app.component.html
@@ -1,4 +1,28 @@
-<h1>Hello, finday-web-app</h1>
+<div class="container">
+  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+    <div class="col-md-3 mb-2 mb-md-0">
+      Finday
+    </div>
+
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
+      <li><a href="#" class="nav-link px-2">Features</a></li>
+      <!-- <li><a href="#" class="nav-link px-2">Pricing</a></li>
+      <li><a href="#" class="nav-link px-2">FAQs</a></li>
+      <li><a href="#" class="nav-link px-2">About</a></li> -->
+    </ul>
+
+    <div class="col-md-3 text-end">
+      <a class="btn btn-outline-primary me-2"
+        [routerLink]="'/login'">Login
+      </a>
+      <a class="btn btn-outline-secondary me-2"
+        (click)="logout()">Logout
+      </a>
+      <!-- <button type="button" class="btn btn-primary">Sign-up</button> -->
+    </div>
+  </header>
+</div>
 <div class="container card mt-2">
   <router-outlet></router-outlet>
 </div>
