feat: create and use field errors.

--- a/finday-web-app/src/app/modules/account/login/login.component.html
+++ b/finday-web-app/src/app/modules/account/login/login.component.html
@@ -8,6 +8,7 @@
                 class="form-control" 
                 id="email">
             <label for="email">Email</label>
+            <field-errors [control]="form.get('email')"></field-errors>
         </div>
         <div class="form-floating">
             <input type="password" 
@@ -15,15 +16,23 @@
                 class="form-control" 
                 id="password">
             <label for="password">Password</label>
+            <field-errors [control]="form.get('password')"></field-errors>
         </div>
 
-        <div class="form-check text-start my-3">
+        <!-- <div class="form-check text-start my-3">
             <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
             <label class="form-check-label" for="flexCheckDefault">
                 Remember me
             </label>
-        </div>
-        <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+        </div> -->
+        @if (loading) {
+            <button class="btn btn-primary w-100 py-2 mt-2" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                <span role="status">Loading...</span>
+            </button>
+        } @else {
+            <button class="btn btn-primary w-100 py-2 mt-2" type="submit">Sign in</button>
+        }
         <p class="mt-5 mb-3 text-body-secondary">&copy; {{year}}</p>
     </form>
 </main>
