--- a/finday-web-app/src/app/app.component.html
+++ b/finday-web-app/src/app/app.component.html
@@ -1,29 +1,36 @@
 <app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
-<div class="container">
-  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-    <div class="col-md-3 mb-2 mb-md-0">
-      Finday
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Eighth navbar example">
+  <div class="container">
+    <a class="navbar-brand" href="#">Finday</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
-      <li><a href="#" class="nav-link px-2">Features</a></li>
-      <!-- <li><a href="#" class="nav-link px-2">Pricing</a></li>
-      <li><a href="#" class="nav-link px-2">FAQs</a></li>
-      <li><a href="#" class="nav-link px-2">About</a></li> -->
-    </ul>
-
-    <div class="col-md-3 text-end">
-      <a class="btn btn-outline-primary me-2"
-        [routerLink]="'/login'">Login
-      </a>
-      <a class="btn btn-outline-secondary me-2"
-        (click)="logout()">Logout
-      </a>
-      <!-- <button type="button" class="btn btn-primary">Sign-up</button> -->
+    <div class="collapse navbar-collapse" id="navbarsExample07">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="'/launch'">Lançamentos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Categorias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Carteiras</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Conta</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" [routerLink]="'/login'">Login</a></li>
+            <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form role="search">
+        <input class="form-control" type="search" placeholder="Search" aria-label="Pesquisar">
+      </form>
     </div>
-  </header>
-</div>
+  </div>
+</nav>
 <div class="container card mt-2">
   <router-outlet></router-outlet>
 </div>
