--- a/finday-web-app/src/app/app.component.html
+++ b/finday-web-app/src/app/app.component.html
@@ -12,7 +12,7 @@
           <a class="nav-link active" aria-current="page" [routerLink]="'/launch'">Lançamentos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Categorias</a>
+          <a class="nav-link" [routerLink]="'/category'">Categorias</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Carteiras</a>
