Wip: category list component, inicializer category form and remove debugger statements.

--- a/finday-web-app/src/app/modules/category/components/category-list/category-list.component.html
+++ b/finday-web-app/src/app/modules/category/components/category-list/category-list.component.html
@@ -1,1 +1,14 @@
-<p>category-list works!</p>
+<h3 class="mt-2">Lista de Categorias</h3>
+<hr />
+<div class="row card-body">
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end mb-2">
+    <button class="btn btn-primary btn-sm me-md-2" type="button" routerLink="new">Adicionar</button>
+  </div>
+  <div class="col-md-12 col-lg-12">
+      <app-table 
+        [columns]="columns"
+        [records]="categories$ | async"
+        (onEdit)="edit($event)">
+      </app-table>
+  </div>
+</div>
