Feat: add wallet list screen

--- a/finday-web-app/src/app/app.component.html
+++ b/finday-web-app/src/app/app.component.html
@@ -15,7 +15,7 @@
           <a class="nav-link" [routerLink]="'/category'">Categorias</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Carteiras</a>
+          <a class="nav-link" [routerLink]="'/wallet'">Carteiras</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Conta</a>
