--- a/finday-web-app/src/app/app.component.html
+++ b/finday-web-app/src/app/app.component.html
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="'/wallet'">Carteiras</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="'/origin'">Origens</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Conta</a>
           <ul class="dropdown-menu">
