--- a/finday-web-app/src/app/app.component.html
+++ b/finday-web-app/src/app/app.component.html
@@ -9,6 +9,9 @@
     <div class="collapse navbar-collapse" id="navbarsExample07">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
+          <a class="nav-link" aria-current="page" [routerLink]="'/expenses'">Despesas</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link active" aria-current="page" [routerLink]="'/launch'">Lançamentos</a>
         </li>
         <li class="nav-item">
