feat: mount screen of expenses.

--- a/finday-web-app/src/app/modules/expenses/expenses.component.html
+++ b/finday-web-app/src/app/modules/expenses/expenses.component.html
@@ -1,1 +1,159 @@
-<p>expenses works!</p>
+<h3 class="mt-2">Despesas - Maio</h3>
+<hr />
+<div class="row card-body">
+    <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-2">
+        <button class="btn btn-primary btn-sm me-md-2" type="button" routerLink="new">Adicionar Despesa</button>
+    </div>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end mb-2">
+        <span>CUSTO DE VIDA: </span><span class="bg-green">R$4.800,00</span>
+    </div>
+    <div class="col-md-12 col-lg-12">
+        <div class="card">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <div class="d-flex justify-content-between">
+                        <span>TOTAL DESPESAS ESSENCIAIS</span>
+                        <span>R$ 2.204,74</span>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="d-flex justify-content-between">
+                        <span>TOTAL DESPESAS NÃO ESSENCIAIS</span>
+                        <span>R$ 504,74</span>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="d-flex justify-content-between">
+                        <span>TOTAL DESPESAS GASTOS INESPERADOS</span>
+                        <span>R$ 2.804,74</span>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="d-flex justify-content-between">
+                        <span>TOTAL DESPESAS</span>
+                        <span>R$ 4.804,74</span>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="card text-center mt-2">
+            <div class="card-header">
+                <ul class="nav nav-tabs card-header-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="true" href="#">GASTOS PREVISTOS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">GASTOS INESPERADOS</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-6">
+                        <h5 class="card-title">Essenciais</h5>
+                        <table class="table">
+                            <thead class="table-dark">
+                                <tr>
+                                    <th scope="col">Descrição</th>
+                                    <th scope="col">Valor</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Aluguel</td>
+                                    <td>R$ 1.200,00</td>
+                                </tr>
+                                <tr>
+                                    <td>Condomínio</td>
+                                    <td>R$ 200,00</td>
+                                </tr>
+                                <tr>
+                                    <td>Água</td>
+                                    <td>R$ 100,00</td>
+                                </tr>
+                                <tr>
+                                    <td>Luz</td>
+                                    <td>R$ 100,00</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col-6">
+                        <h5 class="card-title">Não Essenciais</h5>
+                        <table class="table">
+                            <thead class="table-dark">
+                                <tr>
+                                    <th scope="col">Descrição</th>
+                                    <th scope="col">Valor</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Internet</td>
+                                    <td>R$ 100,00</td>
+                                </tr>
+                                <tr>
+                                    <td>Netflix</td>
+                                    <td>R$ 50,00</td>
+                                </tr>
+                                <tr>
+                                    <td>Spotify</td>
+                                    <td>R$ 50,00</td>
+                                </tr>
+                                <tr>
+                                    <td>Academia</td>
+                                    <td>R$ 100,00</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card text-center mt-2">
+            <div class="card-body">
+                <div class="row">
+                    <h5 class="card-title">Dívidas</h5>
+                    <table class="table">
+                        <thead class="table-dark">
+                            <tr>
+                                <th scope="col">Descrição</th>
+                                <th scope="col">Valor</th>
+                                <th scope="col">Quantidade de Parcelas</th>
+                                <th scope="col">Valor da Parcela</th>
+                                <th scope="col">Valor Restante</th>
+                                <th scope="col">Valor Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Cartão de Crédito</td>
+                                <td>R$ 500,00</td>
+                                <td>12</td>
+                                <td>R$ 50,00</td>
+                                <td>R$ 450,00</td>
+                                <td>R$ 600,00</td>
+                            </tr>
+                            <tr>
+                                <td>Empréstimo</td>
+                                <td>R$ 1000,00</td>
+                                <td>6</td>
+                                <td>R$ 200,00</td>
+                                <td>R$ 200,00</td>
+                                <td>R$ 1200,00</td>
+                            </tr>
+                            <tr>
+                                <td>Financiamento</td>
+                                <td>R$ 1500,00</td>
+                                <td>24</td>
+                                <td>R$ 75,00</td>
+                                <td>R$ 1200,00</td>
+                                <td>R$ 1800,00</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
