--- a/finday-web-app/src/app/modules/expenses/expenses.component.html
+++ b/finday-web-app/src/app/modules/expenses/expenses.component.html
@@ -4,6 +4,7 @@
     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-2">
         <button class="btn btn-primary btn-sm me-md-2" type="button" routerLink="new">Adicionar Despesa</button>
     </div>
+    
     <div class="col-md-12 col-lg-12">
         @if (totalizers$ | async; as totalizers) {
             <div class="d-grid gap-2 d-md-flex justify-content-md-end mb-2">
@@ -68,7 +69,7 @@
                 <div class="row">
                     <div class="col-6">
                         <h5 class="card-title">Essenciais</h5>
-                        <table class="table">
+                        <table class="table table-striped table-bordered table-sm table-header-border-color">
                             <thead class="table-dark">
                                 <tr>
                                     <th scope="col">Descrição</th>
@@ -76,28 +77,27 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>Aluguel</td>
-                                    <td>R$ 1.200,00</td>
-                                </tr>
-                                <tr>
-                                    <td>Condomínio</td>
-                                    <td>R$ 200,00</td>
-                                </tr>
-                                <tr>
-                                    <td>Água</td>
-                                    <td>R$ 100,00</td>
-                                </tr>
-                                <tr>
-                                    <td>Luz</td>
-                                    <td>R$ 100,00</td>
-                                </tr>
+                                @for (expense of expesesEssential$ | async; track expense.id) {
+                                    <tr>
+                                        <td>{{expense.name}}</td>
+                                        <td>R$ {{expense.value}}</td>
+                                    </tr>
+                                }
+                                @empty {
+                                    <tr>
+                                        <td colspan="2">
+                                            <div class="spinner-border" role="status">
+                                                <span class="visually-hidden">Loading...</span>
+                                            </div>
+                                        </td>
+                                    </tr> 
+                                }
                             </tbody>
                         </table>
                     </div>
                     <div class="col-6">
                         <h5 class="card-title">Não Essenciais</h5>
-                        <table class="table">
+                        <table class="table table-striped table-bordered table-sm table-header-border-color">
                             <thead class="table-dark">
                                 <tr>
                                     <th scope="col">Descrição</th>
@@ -105,22 +105,21 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>Internet</td>
-                                    <td>R$ 100,00</td>
-                                </tr>
-                                <tr>
-                                    <td>Netflix</td>
-                                    <td>R$ 50,00</td>
-                                </tr>
-                                <tr>
-                                    <td>Spotify</td>
-                                    <td>R$ 50,00</td>
-                                </tr>
-                                <tr>
-                                    <td>Academia</td>
-                                    <td>R$ 100,00</td>
-                                </tr>
+                                @for (expense of expesesNonEssential$ | async; track expense.id) {
+                                    <tr>
+                                        <td>{{expense.name}}</td>
+                                        <td>R$ {{expense.value}}</td>
+                                    </tr>
+                                }
+                                @empty {
+                                    <tr>
+                                        <td colspan="2">
+                                            <div class="spinner-border" role="status">
+                                                <span class="visually-hidden">Loading...</span>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                }
                             </tbody>
                         </table>
                     </div>
@@ -131,44 +130,12 @@
             <div class="card-body">
                 <div class="row">
                     <h5 class="card-title">Dívidas</h5>
-                    <table class="table">
-                        <thead class="table-dark">
-                            <tr>
-                                <th scope="col">Descrição</th>
-                                <th scope="col">Valor</th>
-                                <th scope="col">Quantidade de Parcelas</th>
-                                <th scope="col">Valor da Parcela</th>
-                                <th scope="col">Valor Restante</th>
-                                <th scope="col">Valor Total</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Cartão de Crédito</td>
-                                <td>R$ 500,00</td>
-                                <td>12</td>
-                                <td>R$ 50,00</td>
-                                <td>R$ 450,00</td>
-                                <td>R$ 600,00</td>
-                            </tr>
-                            <tr>
-                                <td>Empréstimo</td>
-                                <td>R$ 1000,00</td>
-                                <td>6</td>
-                                <td>R$ 200,00</td>
-                                <td>R$ 200,00</td>
-                                <td>R$ 1200,00</td>
-                            </tr>
-                            <tr>
-                                <td>Financiamento</td>
-                                <td>R$ 1500,00</td>
-                                <td>24</td>
-                                <td>R$ 75,00</td>
-                                <td>R$ 1200,00</td>
-                                <td>R$ 1800,00</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="table-responsive">
+                        <app-table 
+                            [columns]="columnsDebt"
+                            [records]="expesesDebts$ | async">
+                        </app-table>
+                    </div>
                 </div>
             </div>
         </div>
